# BofhModel

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  finder_common.hpp  finder_model.hpp  model.files  model.includes  requirements.txt  setup.py
bofh/model/: attack.py  database.py  download_exchange.py  funding.py  generic_contract.py  import_bsc_pools.py  import_ctpgo_pools.py  initdb.py  manage_exchanges.py  manage_stabletokens.py  options.py  read_pool_balances.py  read_token_data.py  runner.py  runner1.py  update_pool_reserves.py  verify_swap_tx.py
bofh/model/abi/: BofhContract-v0.0.1.json
bofh/model/modules/: cached_entities.py  constant_prediction.py  constants.py  contract_calls.py  delayed_execution.py  event_listener.py  graph.py  loggers.py  status_preloaders.py
bofh/model/schema/attacks/sqlite3/: 00_schema.sql
bofh/model/schema/reports/sqlite3/: 00_schema.sql  01_migration.sql  01_schema.sql
bofh/model/schema/reserves/sqlite3/: 00_schema.sql  02_migration.sql  02_schema.sql
bofh/model/schema/sqlite3/: 01_migration.sql  02_migration.sql  02_schema.sql
bofh/model/schema/status/sqlite3/: 00_schema.sql  03_migration.sql  03_schema.sql  04_migration.sql  04_schema.sql  05_migration.sql  05_schema.sql  06_migration.sql  06_schema.sql  07_migration.sql  07_schema.sql  08_migration.sql  08_schema.sql  09_migration.sql  09_schema.sql  10_migration.sql  10_schema.sql  11_migration.sql  11_schema.sql
bofh/model/schema/swap_log/sqlite3/: 01_migration.sql
model/: finder_model.cpp  finder_model.hpp  finder_model_fwd.hpp  finder_model_python.hpp  main_index.hpp  main_index_fwd.hpp
pseudoforestfinder/: graphsearch.py  load_bsc_pools_graph.py  load_from_status_db.py  tree-reasoning.drawio
sql/: 00_schema.sql
src/bofh/commons/: bofh_log.cpp  bofh_log.hpp
src/bofh/model/: bofh_amm_estimation.cpp  bofh_amm_estimation.hpp  bofh_common.hpp  bofh_constraints.cpp  bofh_constraints.hpp  bofh_entity_idx.cpp  bofh_entity_idx.hpp  bofh_entity_idx_fwd.hpp  bofh_fees.cpp  bofh_fees.hpp  bofh_graph_distance.cpp  bofh_graph_distance.hpp  bofh_graph_paths.cpp  bofh_graph_paths.hpp  bofh_model.cpp  bofh_model.hpp  bofh_model_fwd.hpp  bofh_model_py_ext.cpp  bofh_types.cpp  bofh_types.hpp
src/bofh/pathfinder/: finder_3way.cpp  finder_3way.hpp  finder_all_crossing.cpp  finder_all_crossing.hpp  finder_to_token.cpp  finder_to_token.hpp  paths.cpp  paths.hpp  swaps_idx.cpp  swaps_idx.hpp  swaps_idx_fwd.hpp
support/: build_toolchain.sh  install_packages_in_dev_mode.sh  launch_cmake.sh  setup_everything.sh  start_ganache.sh  start_remixd.sh
test/: 0_graph_make_and_destroy.cpp  1_elective_inverse_collimation.cpp  bsc_pools.data.reduced  test_address.cpp  test_lookups.py  test_multiindex.cpp  test_utils.cpp  test_utils.hpp
tools/: load_pools_json.py
